# hmcalc_lib

./: .gitignore  README.md  pyproject.toml
hmcalc/: __init__.py  change.py  closeness.py  compare.py  delta_category.py  normalize.py  percent.py  range_summary.py  rounding.py  stability.py  trend.py
tests/: test_change.py
