
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hmcalc"
version = "0.2.2"
description = "Human-centered math utilities for change, comparison, trends and more"
authors = [{ name="Thendral Magudapathi", email="thendralmag@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.0"

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/thendralmagudapathi/hmcalc_lib"
